--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^3.6.0",
     "express": "^4.8.0",
     "file-loader": "^4.3.0",
+    "firebase": "^7.19.0",
     "jquery": "^3.5.1",
     "paper": "^0.12.11",
     "raw-loader": "^4.0.1",
