--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.8.0",
     "file-loader": "^4.3.0",
     "firebase": "^7.19.0",
+    "intersection-observer": "^0.11.0",
     "jquery": "^3.5.1",
     "paper": "^0.12.11",
     "raw-loader": "^4.0.1",
@@ -24,6 +25,7 @@
     "vue": "^2.6.11",
     "vue-cli": "^2.9.6",
     "vue-loader": "^15.9.3",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
